--- a/Q.html
+++ b/Q.html
@@ -65,8 +65,8 @@
 <pre><code>
 var circuit = Q`
 
-	H-X-C0-Y-M
-	I-I-C1-Y-M
+	<strong>H</strong>-<strong>X</strong>-<strong>C0</strong>-<strong>Y</strong>-<strong>M</strong>
+	<strong>I</strong>-<strong>I</strong>-<strong>C1</strong>-<strong>Y</strong>-<strong>M</strong>
 `
 </code></pre>
 			<p>
@@ -92,7 +92,7 @@ var circuit = Q`
 			</p>
 			<ul class="properties">
 				<li>
-					<dt id=".REVISION"><a href="#.REVISION">REVISION</a></dt>
+					<dt id=".REVISION">REVISION</dt>
 					<dd>
 						<code class="value-type">Number</code>
 						The code revision number. 
@@ -100,7 +100,7 @@ var circuit = Q`
 					</dd>
 				</li>
 				<li>
-					<dt id=".EPSILON"><a href="#.EPSILON">EPSILON</a></dt>
+					<dt id=".EPSILON">EPSILON</dt>
 					<dd>
 						<code class="value-type">Number</code>
 						Set equal to <code>Number.EPSILON * 6</code>.
@@ -117,7 +117,7 @@ a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a ).<a href="Co
 					</dd>
 				</li>
 				<li>
-					<dt id=".RADIANS_TO_DEGREES"><a href="#.RADIANS_TO_DEGREES">RADIANS_TO_DEGREES</a></dt>
+					<dt id=".RADIANS_TO_DEGREES">RADIANS_TO_DEGREES</dt>
 					<dd>
 						<code class="value-type">Number</code>
 						Set equal to <code>180 / Math.PI</code>.
@@ -128,42 +128,42 @@ a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a ).<a href="Co
 			<h4>Inspection</h4>
 			<ul class="properties">
 				<li>
-					<dt id=".help"><a href="#.help">help</a></dt>
+					<dt id=".help">help</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Description TK.
 					</dd>
 				</li>
 				<li>
-					<dt id=".extractDocumentation"><a href="#.extractDocumentation">extractDocumentation</a></dt>
+					<dt id=".extractDocumentation">extractDocumentation</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Description TK.
 					</dd>
 				</li>
 				<li>
-					<dt id=".verbosity"><a href="#.verbosity">verbosity</a></dt>
+					<dt id=".verbosity">verbosity</dt>
 					<dd>
 						<code class="value-type">Number</code>
 						Description TK.
 					</dd>
 				</li>
 				<li>
-					<dt id=".log"><a href="#.log">log</a></dt>
+					<dt id=".log">log</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Description TK.
 					</dd>
 				</li>				
 				<li>
-					<dt id=".warn"><a href="#.warn">warn</a></dt>
+					<dt id=".warn">warn</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Description TK.
 					</dd>
 				</li>
 				<li>
-					<dt id=".error"><a href="#.error">error</a></dt>
+					<dt id=".error">error</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Description TK.
@@ -173,21 +173,21 @@ a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a ).<a href="Co
 			<h4>Constants creation and reference</h4>		
 			<ul class="properties">
 				<li>
-					<dt id=".constants"><a href="#.constants">constants</a></dt>
+					<dt id=".constants">constants</dt>
 					<dd>
 						<code class="value-type">Object</code>
 						Description TK.
 					</dd>
 				</li>
 				<li>
-					<dt id=".createConstant"><a href="#.createConstant">createConstant</a></dt>
+					<dt id=".createConstant">createConstant</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Description TK.
 					</dd>
 				</li>
 				<li>
-					<dt id=".createConstants"><a href="#.createConstants">createConstants</a></dt>
+					<dt id=".createConstants">createConstants</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Description TK.
@@ -197,35 +197,35 @@ a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a ).<a href="Co
 			<h4>Maths</h4>
 			<ul class="properties">
 				<li>
-					<dt id=".hypotenuse"><a href="#.hypotenuse">hypotenuse</a></dt>
+					<dt id=".hypotenuse">hypotenuse</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Description TK.
 					</dd>
 				</li>
 				<li>
-					<dt id=".logHypotenuse"><a href="#.logHypotenuse">logHypotenuse</a></dt>
+					<dt id=".logHypotenuse">logHypotenuse</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Description TK.
 					</dd>
 				</li>
 				<li>
-					<dt id=".hyperbolicSine"><a href="#.hyperbolicSine">hyperbolicSine</a></dt>
+					<dt id=".hyperbolicSine">hyperbolicSine</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Description TK.
 					</dd>
 				</li>
 				<li>
-					<dt id=".hyperbolicCosine"><a href="#.hyperbolicCosine">hyperbolicCosine</a></dt>
+					<dt id=".hyperbolicCosine">hyperbolicCosine</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Description TK.
 					</dd>
 				</li>
 				<li>
-					<dt id=".round"><a href="#.round">round</a></dt>
+					<dt id=".round">round</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Description TK.
@@ -235,28 +235,28 @@ a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a ).<a href="Co
 			<h4>Miscellaneous</h4>
 			<ul class="properties">
 				<li>
-					<dt id=".animals"><a href="#.animals">animals</a></dt>
+					<dt id=".animals">animals</dt>
 					<dd>
 						<code class="value-type">Array</code>
 						Description TK.
 					</dd>
 				</li>
 				<li>
-					<dt id=".animals3"><a href="#.animals3">animals3</a></dt>
+					<dt id=".animals3">animals3</dt>
 					<dd>
 						<code class="value-type">Array</code>
 						Description TK.
 					</dd>
 				</li>
 				<li>
-					<dt id=".colors"><a href="#.colors">colors</a></dt>
+					<dt id=".colors">colors</dt>
 					<dd>
 						<code class="value-type">Array</code>
 						Description TK.
 					</dd>
 				</li>
 				<li>
-					<dt id=".toTitleCase"><a href="#.toTitleCase">toTitleCase</a></dt>
+					<dt id=".toTitleCase">toTitleCase</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Expects one <code>String</code> argument.
@@ -266,7 +266,7 @@ a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a ).<a href="Co
 					</dd>
 				</li>
 				<li>
-					<dt id=".centerText"><a href="#.centerText">centerText</a></dt>
+					<dt id=".centerText">centerText</dt>
 					<dd>
 						<code class="value-type">Function</code>
 						Description TK.
