--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 				Help us by <a href="https://github.com/stewdio/q.js/issues" target="_blank">creating (or resolving) issues</a> on <a href="https://github.com/stewdio/q.js" target="_blank">Q’s GitHub repository</a>.
 				Let’s make quantum computing accessible!
 			</p>
-			<h3>Style</h3>
+			<h3>Code style</h3>
 			<p>
 				Q’s source code is verbose, heavily commented, and there’s great empathy for fellow learners.
 				<a href="https://en.wikipedia.org/wiki/Visual_hierarchy" target="_blank">Visual hierarchy</a> is key when facing a brick of monospace code gibberish. 
