--- a/Circuit.html
+++ b/Circuit.html
@@ -486,116 +486,201 @@ q5  |0⟩───○──┤ X ├───○───┤ M │
 			<h3 id="Static_properties">Static properties</h3>
 			<ul class="properties">
 				<li>
-					<dt id=".index"><a href="#.index">index</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".index">index</dt>
+					<dd>
+						<code class="value-type">Number</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".help"><a href="#.help">help</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".help">help</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".constants"><a href="#.constants">constants</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".constants">constants</dt>
+					<dd>
+						<code class="value-type">Object</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".createConstant"><a href="#.createConstant">createConstant</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".createConstant">createConstant</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".createConstants"><a href="#.createConstants">createConstants</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".createConstants">createConstants</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".fromText"><a href="#.fromText">fromText</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".fromText">fromText</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 			</ul>
 			<h3 id="Prototype_properties">Prototype properties</h3>
 			<h4>Non-destructive methods</h4>
 			<ul class="properties">
 				<li>
-					<dt id=".prototype.clone"><a href="#.prototype.clone">clone</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.clone">clone</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.toTable"><a href="#.prototype.toTable">toTable</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.toTable">toTable</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 
 				<li>
-					<dt id=".prototype.toText"><a href="#.prototype.toText">toText</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.toText">toText</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.toDiagram"><a href="#.prototype.toDiagram">toDiagram</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.toDiagram">toDiagram</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.toDom"><a href="#.prototype.toDom">toDom</a></dt>
-					<dd>Description TK. (Not yet functional.)</dd>
+					<dt id=".prototype.toDom">toDom</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.results"><a href="#.prototype.results">results</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.results">results</dt>
+					<dd>
+						<code class="value-type">Array</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.determineRanges"><a href="#.prototype.determineRanges">determineRanges</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.determineRanges">determineRanges</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.copy"><a href="#.prototype.copy">copy</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.copy">copy</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 			</ul>
 			<h4>Destructive methods</h4>
 			<ul class="properties">
 				<li>
-					<dt id=".prototype.ensureMomentsAreReady$"><a href="#.prototype.ensureMomentsAreReady$">ensureMomentsAreReady$</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.ensureMomentsAreReady$">ensureMomentsAreReady$</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>				
 				<li>
-					<dt id=".prototype.fillEmptyOperations$"><a href="#.prototype.fillEmptyOperations$">fillEmptyOperations$</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.fillEmptyOperations$">fillEmptyOperations$</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.removeHangingOperations$"><a href="#.prototype.removeHangingOperations$">removeHangingOperations$</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.removeHangingOperations$">removeHangingOperations$</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.clearThisInput$"><a href="#.prototype.clearThisInput$">clearThisInput$</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.clearThisInput$">clearThisInput$</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.set$"><a href="#.prototype.set$">set$</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.set$">set$</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.remove$"><a href="#.prototype.remove$">remove$</a></dt>
-					<dd>Description TK. (Not yet functional, may remove.)</dd>
+					<dt id=".prototype.cut$">cut$</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.cut$"><a href="#.prototype.cut$">cut$</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.spliceCut$">spliceCut$</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.paste$"><a href="#.prototype.paste$">paste$</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.paste$">paste$</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.pasteInsert$"><a href="#.prototype.pasteInsert$">pasteInsert$</a></dt>
-					<dd>Description TK. (Not yet functional.)</dd>
+					<dt id=".prototype.splicePaste$">splicePaste$</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.expand$"><a href="#.prototype.expand$">expand$</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.pasteInsert$">pasteInsert$</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.trim$"><a href="#.prototype.trim$">trim$</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.expand$">expand$</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 				<li>
-					<dt id=".prototype.run$"><a href="#.prototype.run$">run$</a></dt>
-					<dd>Description TK.</dd>
+					<dt id=".prototype.trim$">trim$</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
+				</li>
+				<li>
+					<dt id=".prototype.run$">run$</dt>
+					<dd>
+						<code class="value-type">Function</code>
+						Description TK.
+					</dd>
 				</li>
 			</ul>
 			<hr>
